# Review-Helper

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  RELEASE.md  SECURITY.md  gallery.html  index.html  package-lock.json  package.json  preview.html  test-utf8-slicing  test_bug  vitest.config.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  config.rs  context.rs  db.rs  decisions.rs  lib.rs  main.rs  projects.rs  seed_real.rs  settings.rs  suggestions.rs  util.rs
src-tauri/src/assess/: commands.rs  mod.rs
src-tauri/src/audit/: commands.rs
src-tauri/src/cards/: commands.rs  detect.rs  mod.rs  seed_cards.json  study.rs
src-tauri/src/chat/: commands.rs  mod.rs  store.rs
src-tauri/src/decisions/: commands.rs
src-tauri/src/features/: commands.rs  mod.rs
src-tauri/src/github/: api.rs  clone.rs  commands.rs  device.rs  keychain.rs  mod.rs
src-tauri/src/grill/: bank.json  commands.rs  generate.rs  mod.rs
src-tauri/src/learning/: commands.rs  embed.rs  gen.rs  ingest.rs  intake.rs  mastery.rs  materials.rs  mod.rs  profile.rs  propose.rs  retrieve.rs  schedule.rs  sections.rs  store.rs  tutor.rs
src-tauri/src/model/: claude.rs  commands.rs  fake.rs  local.rs  mod.rs  registry.rs
src-tauri/src/plan/: commands.rs  ingest.rs  mod.rs  parse.rs  prompts.rs  store.rs
src-tauri/src/profile/: commands.rs  mod.rs  reflect.rs
src-tauri/src/stack/: catalog.json  commands.rs  mod.rs  premade.json
src-tauri/src/suggestions/: commands.rs
src-tauri/src/sync/: commands.rs  issues.rs  mod.rs
src-tauri/src/transcribe/: commands.rs  mod.rs
(+178 files in other folders)
