[package]
name = "review-helper"
version = "0.1.0"
description = "Review Helper — a Tauri desktop app to vibecode the right way"
authors = ["hotredsam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "review_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `bundled` compiles SQLite from source (no system dependency, reproducible builds).
rusqlite = { version = "0.40", features = ["bundled"] }
# GitHub token lives in the macOS Keychain (v3.6 + apple-native; v4 split the API).
keyring = { version = "3.6", features = ["apple-native"] }
# Blocking HTTP for the GitHub REST API + device flow (native-tls = Security framework).
reqwest = { version = "0.12", features = ["blocking", "json"] }
# Evidence-based spaced-repetition scheduler (FSRS) for Learning-mode flashcards.
# Pure-Rust, MIT; `serde` lets us persist a card's scheduling state as JSON.
rs-fsrs = { version = "1.2.1", features = ["serde"] }
# Timestamps for FSRS scheduling (Utc::now / due dates).
chrono = { version = "0.4", default-features = false, features = ["clock"] }

